// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> render user info 1`] = `
<div
  className="wcs_header"
>
  <CookieBanner
    buttonMessage="Got it"
    cookie="user-has-accepted-cookies"
    cookieExpiration={
      Object {
        "years": 1,
      }
    }
    cookies={
      Cookies {
        "HAS_DOCUMENT_COOKIE": true,
        "cookies": Object {},
        "hooks": undefined,
      }
    }
    dismissOnScroll={true}
    dismissOnScrollThreshold={0}
    message="Yes, we use cookies. If you don't like it change website, we won't miss you! ;)"
    onAccept={[Function]}
    styles={Object {}}
  />
  <PageHeader
    bsClass="title-header"
  >
    Music Helper
  </PageHeader>
  <UserInfo
    fb_user={
      Object {
        "name": "Simba",
      }
    }
    onLogoutClick={[Function]}
    sp_user={Object {}}
  />
</div>
`;

exports[`<Header/> renders without crashing ChartPresenter 1`] = `
<Header>
  <div
    className="wcs_header"
  >
    <CookieBanner
      buttonMessage="Got it"
      cookie="user-has-accepted-cookies"
      cookieExpiration={
        Object {
          "years": 1,
        }
      }
      cookies={
        Cookies {
          "HAS_DOCUMENT_COOKIE": true,
          "cookies": Object {},
          "hooks": undefined,
        }
      }
      dismissOnScroll={true}
      dismissOnScrollThreshold={0}
      message="Yes, we use cookies. If you don't like it change website, we won't miss you! ;)"
      onAccept={[Function]}
      styles={Object {}}
    >
      <BannerContent
        buttonMessage="Got it"
        message="Yes, we use cookies. If you don't like it change website, we won't miss you! ;)"
        onAccept={[Function]}
        styles={Object {}}
      >
        <div
          className="react-cookie-banner"
          style={
            Object {
              "backgroundColor": "#484848",
              "height": "45px",
              "position": "relative",
              "textAlign": "center",
              "width": "100%",
              "zIndex": "10000",
            }
          }
        >
          <span
            className="cookie-message"
            style={
              Object {
                "color": "#F0F0F0",
                "fontWeight": 500,
                "lineHeight": "45px",
              }
            }
          >
            Yes, we use cookies. If you don't like it change website, we won't miss you! ;)
          </span>
          <button
            className="button-close"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.6)",
                "border": "none",
                "borderRadius": "3px",
                "boxShadow": "none",
                "color": "#242424",
                "cursor": "pointer",
                "fontSize": "12px",
                "fontWeight": "500",
                "lineHeight": "24px",
                "marginTop": "-12px",
                "padding": "0 8px",
                "position": "absolute",
                "right": "35px",
                "top": "50%",
              }
            }
          >
            Got it
          </button>
        </div>
      </BannerContent>
    </CookieBanner>
    <PageHeader
      bsClass="title-header"
    >
      <div
        className="title-header"
      >
        <h1>
          Music Helper
        </h1>
      </div>
    </PageHeader>
  </div>
</Header>
`;

exports[`<Header/> renders without crashing ChartPresenter 2`] = `""`;
